--- a/project_report.tex
+++ b/project_report.tex
@@ -480,28 +480,7 @@ The limitation to calculating the cost table in this way is that this cost table
 
 A possible way to overcome this limitation is possibly to make the cost table 3D, with the extra dimension representing different starting number of iPads.
 
-Next, we consider how to handle the game logic if the we can use infinite number of iPads. In that case, we do not have a starting number of iPads, so we cannot enumerate all the costs during the game initialisation. What we can do is to calculate the cost table on the fly using the current number iPad used 
-
-The pseudo code to calculate the cost table for infinite number of iPads is as follows
-
-\begin{algorithm}[H]
-\caption{Calculate the cost table for dynamic iPad cost (infinite number of iPads)}
-\begin{algorithmic}[1]
-\REQUIRE L, f, numIpadUsed
-\STATE $table \leftarrow 1DTable(L)$
-\STATE $table[1] = f(numIpadUsed+1)+1$
-\FOR{$i = 2$ \TO $L$}
-	\STATE $best \leftarrow \infty$
-	\FOR{$k = 1$ \TO $j$}
-		\STATE $result = max(table[k - 1] + f(numIpadUsed+1), table[j - k])$
-		\IF{$result < best$}
-			\STATE $best \leftarrow result$
-		\ENDIF
-	\ENDFOR
-	\STATE $table[i] = best$
-\ENDFOR
-\end{algorithmic}
-\end{algorithm}
+For infinite number of iPads, however, the cost table method break down. As the starting number of iPads is indeterminate, it is impossible to precompute the cost table for all possible game states.
 
 %===============================================================================
 % End of Chapter 6
