--- a/project_report.tex
+++ b/project_report.tex
@@ -84,7 +84,7 @@ Prof. Sim Khe Chai
 \onehalfspacing
 \addcontentsline{toc}{chapter}{Abstract}
 In this project, we were asked to design the game logic for ``iPad Crusher'', an iOS game that Prof. Sim is developing as an adaptation to the Egg Dropping Problem. Given a certain number of iPads and strength levels, the player is asked to find the lowest strength level that will break an iPad. Similar to the Egg Dropping Puzzle, the goal of the game is to find the best strategy so that it involves the fewest number of crushing in the worst-case scenario. \\\\
-In this report we present three approaches in designing the game logic, the first is the original solution that we came up with, which is to generate the cost table and make the game decisions based on the costs. The second approach is one that Prof. Sim briefly mentioned, which decides based on the optimum level stored in a table. The third approach is one that we found online, the combinatorics approach. We will discuss the advantages and disadvantages of each of the three approaches, as well as different implementations of them. Lastly, we will also discuss some interesting extensions of the problem such as adding an extra cost for breaking an iPad, and a variant of it with unlimited number of iPads, etc. To sum up, we conclude that for the original game logic, the cost table approach is the better choice, whereas for some extensions, the decision tree approach can be better.
+In this report we present three approaches in designing the game logic, the first is the original solution that we came up with, which is to generate the cost table and make the game decisions based on the costs. The second approach is one that Prof. Sim briefly mentioned, which decides based on the optimum level stored in a table. The third approach is one that we found online, the combinatorics approach. We will discuss the advantages and disadvantages of each of the three approaches, as well as different implementations of them. Lastly, we will also discuss some interesting extensions of the problem such as adding an extra cost for breaking an iPad, and a variant of it with unlimited number of iPads, etc. To sum up, we conclude that for the original game logic, the cost table approach is the better choice, whereas for some extensions, the optimum level approach can be better.
 
 \subsubsection*{Subject Descriptors:\\}
 \begin{description}[labelindent=1cm]
@@ -139,12 +139,12 @@ The egg dropping puzzle is a well known one and an example most often used to il
 % Start of Chapter 2
 %===============================================================================
 \chapter{Existing work}
-Since this is a classic problem, although there is no research paper on it, there are quite a number of blog posts about it online.
+Since the egg dropping puzzle is a classic problem, there are quite a number of blog posts about it online, although we did not manage to find any research paper on it.
 
 \section{What did the folks say?}
-On the Dynamic Programming Wikipedia page \cite{dpwiki}, there is a small section talking about the original egg dropping puzzle. It provides a way to solve the original egg dropping puzzle using dynamic programming. And in fact, this is the solution that most of the web posts about this problem will give. We will make use of dynamic programming in one of our approaches too. \\\\
-In one of the web posts, we found another very interesting way of solving the original egg dropping problem, by mapping the problem into another combinatorics problem and do some counting. We will discuss about this in one of the later chapters. \\\\
-Besides this, Prof. Sim has also shared with us his approach of designing the game logic, which is different from the approach that we have in mind. We will discuss about how we extend our approach with insights from Prof. Sim's approach. 
+On the Dynamic Programming Wikipedia page \cite{dpwiki}, there is a small section talking about the original egg dropping puzzle. It provides a way to solve the original egg dropping puzzle using dynamic programming, which is also the solution that most of the web posts about this problem give. Similarly, we will be making use of dynamic programming in one of our approaches as well. \\\\
+In one of the web posts, we found a very interesting way of solving the original egg dropping problem, by mapping the problem into a combinatorics problem and do some counting. We will discuss about this in one of the later chapters. \\\\
+Besides this, Prof. Sim has also shared with us his approach of designing the game logic, which is different from the approach that we have in mind. We will discuss about how we can extend our approach with ideas from Prof. Sim's approach. 
 
 %===============================================================================
 % End of Chapter 2
