--- a/project_report.tex
+++ b/project_report.tex
@@ -84,12 +84,11 @@ Prof. Sim Khe Chai
 \onehalfspacing
 \addcontentsline{toc}{chapter}{Abstract}
 In this project, we were asked to design the game logic for ``iPad Crusher'', an iOS game that Prof. Sim is developing as an adaptation to the Egg Dropping Problem. Given a certain number of iPads and strength levels, the player is asked to find the lowest strength level that will break an iPad. Similar to the Egg Dropping Puzzle, the goal of the game is to find the best strategy so that it involves the fewest number of crushing in the worst-case scenario. \\\\
-In this report we present three approaches in designing the game logic, the first is the original solution that we came up with, which is to generate the cost table and make the game decisions based on the costs. The second approach is one that Prof. Sim briefly mentioned, which decides based on the optimum level stored in a table. The third approach is one that we found online, the combinatorics approach. We will discuss the advantages and disadvantages of each of the three approaches, as well as different implementations of them. Lastly, we will also discuss some interesting extensions of the problem such as adding an extra cost for breaking an iPad, and a variant of it with unlimited number of iPads, etc. To sum up, we conclude that for the original game logic, the cost table approach is the better choice, whereas for some extensions, the decision tree approach can be better.
+In this report we present three approaches in designing the game logic, the first is the original solution that we came up with, which is to generate the cost table and make the game decisions based on the costs. The second approach is one that Prof. Sim briefly mentioned, which decides based on the optimum level stored in a table. And we develop from an online blog post the combinatorics approach. We will discuss the advantages and disadvantages of each of the three approaches, as well as different implementations of them. Lastly, we will also discuss some interesting extensions of the problem such as adding an extra cost for breaking an iPad, etc. To sum up, we conclude that for the game logic, the cost table approach is good because it is fast and simple, whereas the optimum level approach has its advantage too. The combinatorics method is interesting and can be super fast in computing large problems, but it is not as straight forward as the other approaches.
 
 \subsubsection*{Subject Descriptors:\\}
 \begin{description}[labelindent=1cm]
 	\item[I.2.8] Dynamic Programming
-	\item[K.8.0] Games
 	\item[G.2.1] Combinatorics
 \end{description}
 
@@ -511,7 +510,10 @@ The pseudo code to calculate the cost table for infinite number of iPads is as f
 % Start of Chapter 7
 %===============================================================================
 \chapter{Conclusion}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis lacus posuere, tincidunt mauris vitae, bibendum sapien. Suspendisse a eros pretium, pretium libero eget, ornare ante. Donec efficitur gravida pellentesque. Curabitur sit amet pulvinar tortor. In eu risus commodo, elementum tellus ac, commodo mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer hendrerit arcu sem, convallis dignissim nisi faucibus at. Praesent ut rutrum libero, sollicitudin blandit dui. Donec mi nisi, cursus quis accumsan et, molestie ut nisi. Sed egestas enim in dolor tincidunt dictum. Sed eu semper sem. Sed elementum augue ac pretium eleifend. Ut massa tortor, rhoncus a mi ac, congue ullamcorper eros. Maecenas imperdiet orci quis dui rhoncus, id rhoncus mi condimentum. Nunc blandit egestas leo, sit amet porttitor mi malesuada nec. Pellentesque id bibendum purus, a porta risus.
+We have presented 3 different approaches, namely the cost table approach, the optimum level approach, and the combinatorics approach. We discussed how to design the game logic using each of the three approaches, how they work, their implementations, their advantages and disadvantages. We also talked about how to extend our approaches to support several extension of the game. \\\\
+The cost table is simple and fast, easy to understand and extensible. It is good for designing the game logic but it is not very good at giving hints. In contrast, the optimum level approach would be better at giving hints. Therefore it good be a good idea to combine them so that we can design game logics for different extensions of the game and yet still be able to provide hints. \\\\
+The combinatorics method is interesting method to compute the cost table but not as straightforward as the dynamic programming method. It can be super fast on computing certain huge problems. However, it might not be as fast as the dynamic programming algorithm in populating the table. \\\\
+Throughout the duration of this project, we gained a lot of knowledge and insights from what we have found and what we have developed. We also gained some experiences of doing research! We are happy.
 
 %===============================================================================
 % End of Chapter 7
